syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.dclupgrade;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dclupgrade/params.proto";
import "dclupgrade/proposed_upgrade.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/dclupgrade/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/zigbeealliance/distributedcomplianceledger/dclupgrade/params";
  }
  // Queries a ProposedUpgrade by index.
	rpc ProposedUpgrade(QueryGetProposedUpgradeRequest) returns (QueryGetProposedUpgradeResponse) {
		option (google.api.http).get = "/zigbee-alliance/distributedcomplianceledger/dclupgrade/proposed_upgrade/{name}";
	}

	// Queries a list of ProposedUpgrade items.
	rpc ProposedUpgradeAll(QueryAllProposedUpgradeRequest) returns (QueryAllProposedUpgradeResponse) {
		option (google.api.http).get = "/zigbee-alliance/distributedcomplianceledger/dclupgrade/proposed_upgrade";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetProposedUpgradeRequest {
	  string name = 1;

}

message QueryGetProposedUpgradeResponse {
	ProposedUpgrade proposedUpgrade = 1 [(gogoproto.nullable) = false];
}

message QueryAllProposedUpgradeRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllProposedUpgradeResponse {
	repeated ProposedUpgrade proposedUpgrade = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
