syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.dclupgrade;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/dclupgrade/types";

// Msg defines the Msg service.
service Msg {
      rpc ProposeUpgrade(MsgProposeUpgrade) returns (MsgProposeUpgradeResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgProposeUpgrade {
  string creator = 1;
  string plan = 2;
}

message MsgProposeUpgradeResponse {
}

// this line is used by starport scaffolding # proto/tx/message